...
      'name': 'Name',
      'language': 'Language',
      'russian': 'Russian',
      'english': 'English',
    },
    'ru': {
      'home': 'Главная',
      'search': 'Поиск',
      'bookings': 'Бронирования',
      'chats': 'Чаты',
      'profile': 'Профиль',
      'error': 'Ошибка',
      'ok': 'ОК',
...
